test/files/neg/implicitly-self.check
implicitly-self.scala:7: warning: Implicit resolves to enclosing method c
  implicit def c: Char = implicitly[Char]
                                   ^
implicitly-self.scala:8: warning: Implicit resolves to enclosing value s
  implicit val s: String = implicitly[String]
                                     ^
implicitly-self.scala:10: warning: Implicit resolves to enclosing value t
    def f = implicitly[Int]
                      ^
implicitly-self.scala:13: warning: Implicit resolves to enclosing object tcString
  implicit object tcString extends TC[String] { def ix = implicitly[TC[String]].ix + 1 }
                                                                   ^
implicitly-self.scala:22: warning: Implicit resolves to enclosing method bad
  implicit def bad[A](a: A)(implicit ev: A => T): Sizeable = ev(a)
                                                               ^
error: No warnings can be incurred under -Werror.
5 warnings
1 error
